[package]
name = "lilacc_parser"
version = "0.1.0"
authors = ["Taiki Harada"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.5"

[dependencies]
lilacc_ast = {path = "../lilacc_ast"}
lilacc_lexer = {path = "../lilacc_lexer"}

lalrpop-util = "0.19.5"
regex = "1"
